tests/sksl/errors/UnknownDivideByZero.glsl
### Compilation failed:

error: 5: division by zero
error: 6: division by zero
error: 7: division by zero
error: 8: division by zero
error: 9: division by zero
error: 10: division by zero
error: 11: division by zero
error: 13: division by zero
error: 14: division by zero
error: 15: division by zero
error: 16: division by zero
error: 17: division by zero
error: 18: division by zero
error: 19: division by zero
error: 20: division by zero
error: 21: division by zero
16 errors
